fixing unit tests

--- a/src/test/resources/bluc.properties
+++ b/src/test/resources/bluc.properties
@@ -1,4 +1,4 @@
-FSRepoLoader.certFolder=C:\\Users\\sergio.fonseca\\iniciativas\\bluc-github\\acRepo
+FSRepoLoader.certFolder=src/test/resources/acrepo
 RepoLoader.loaderType=bluecrystal.service.loader.FSRepoLoader
 LCRLoader.cacheType=bluecrystal.service.loader.MapCacheManager
 httpLoader=bluecrystal.service.loader.ExternalLoaderHttpNio
